# sheens

./: .gitignore  .travis.yml  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  NOTICE  README.md  doc.go  docker.mk  go.mod  go.sum
.github/workflows/: push.yaml
cmd/: README.md
cmd/mcrew/: README.md  client-ws.go  ha-boot.json  http.go  http_glue.go  http_glue_test.go  http_input.txt  http_test.go  input.txt  limits.go  main.go  protocol.go  service-tcp.go  service-ws.go  service.go  service_test.go  storage.go  timers.go  timers_glue.go  timers_glue_test.go  timers_test.go  util.go
cmd/mdb/: README.md  input.txt  main.go  main_test.go  mdb.go  mdb_test.go
cmd/mexpect/: README.md  mexpect.go  mexpect_test.go
cmd/mqclient/: README.md  main.go
cmd/mqshell/: README.md  main.go  qos.go  qos_test.go
cmd/mservice/: .gitignore  README.md  anomalytoy.txt  crewcache.go  ctlplane.go  dataplane.go  demo.go  http.txt  http_handler.go  http_test.go  input.txt  main.go  protocol.go  protocol_test.go  service.go  service_test.go  specs.go  specs_test.go  subs.go  timers.go  timing.go  util.go  websockets.go  werror.go
cmd/msimple/: README.md  handlers.go  main.go  util.go
cmd/patmatch/: patmatch.go
cmd/sheensio/: README.md  main.go
cmd/sio/: README.md  demo.sh  httpd.go  input.json  main.go  mqtt.go  stdio.go  ws.go
cmd/siomq/: README.md  main.go  run.sh
cmd/siostd/: README.md  main.go  mosquitto.conf  run.sh
cmd/spectool/: .gitignore  README.md  demo-lib.js  demo.yaml  driver.js  js.go  main.go  specmod.go
core/: actions.go  actions_test.go  context.go  doc.go  doc_test.go  errors.go  ex.go  match.go  match.md  match_test.go  match_test.js  params.go  spec.go  spec_test.go  specter.go  step.go  step_test.go  stopreason_jsonenums.go  stopreason_string.go  util.go
crew/: crew.go  machine.go
doc/: by-example.md  development.md  guide.md  patmatch.v  rfc.md  shakespeare.md
examples/agent/: agent.csv  mselect.go.1  run.go.1
interpreters/: interpreters.go
interpreters/ecmascript/: README.md  ecmascript.go  ecmascript_test.go  islices.go
interpreters/goja/: README.md  goja.go  goja_test.go  islices.go  (+1 more)
js/: .gitignore  CMakeLists-ExternalProjects.txt  CMakeLists.txt  CMakeLists.txt-duktape  Makefile  README.md  demo.c  demo.js  embedstr.sh  match.js  prof.js  sandbox.js  sheens.h  sheens.ipynb  step.js
match/: match.go  match.md  match_fuzz_test.go  match_test.go  match_test.json
sio/: README.md  captainspec.go  conf.go  couplings.go  crew.go  crew_test.go  doc.go  http.go  http_test.go  httpglue.go  httpspec.go  jsonstore.go  limits.go  stdio.go  timers.go  timers_glue.go  timersspec.go  util.go
specs/: anomalytoy.yaml  collatz.yaml  door-time.js  door.yaml  double-test.yaml  double.yaml  double2.yaml  double_then_triple.yaml  doublecount.yaml  echo.yaml  echoresponse.yaml  gettime.yaml  ha-switches.yaml  haswitches.yaml  history.yaml  homeassistant.yaml  infiniteloop-bindings.yaml  infiniteloop-messages.yaml  lowbattery.yaml  makerequest.yaml  nomotion.yaml  notices.yaml  state.yaml  test.yaml  triple.yaml  turnstile.yaml  weatherslackreport.yaml
tools/: README.md  analysis.go  analysis_test.go  doc.go  dot.go  dot_test.go  expect.go  expect_test.go  inline.go  inline_test.go  mermaid.go  mermaid_test.go  release.sh  spec-html.css  spec-html.go  spec-html.js  spec-html_test.go
util/: README.md  util.go  util_test.go
(+44 files in other folders)
